--- a/a.bib
+++ b/a.bib
@@ -3,12 +3,14 @@ author = {华东理工大学主页},
 title = {学校简介},
 year = {2014},
 url = {http://www.ecust.edu.cn},
+language = {zh}
 }
 @online{pokemon,
 author = {武藏 and 小次郎 and 喵喵},
 title = {宠物小精灵火箭队台词},
 year = {1996},
 url = {http://pokemon.com},
+language = {zh}
 }
 @online{latex,
 author = {wikipedia},
@@ -21,11 +23,12 @@ author = {华东理工教务处},
 title = {教务处本科生毕业论文格式规范（2006年版）},
 year = {2006},
 url = {http://jwc.ecust.edu.cn},
+language = {zh}
 }
 @program{gbt,
-  title={GBT7714-2005-BibTeX-Style},
+  title={GBT7714-2005},
   address={web},
-  publisher={Github},
-  year={2014},
+  publisher={Internet},
+  year={2005},
   media={DK},
 }
