--- a/a.bib
+++ b/a.bib
@@ -1,34 +1,101 @@
-@online{ecust,
-author = {华东理工大学主页},
-title = {学校简介},
-year = {2014},
-url = {http://www.ecust.edu.cn},
-language = {zh}
+@book{nodejs,
+  title={Node.js开发指南},
+  author={BYVoid},
+  isbn={9787115283993},
+  publisher={人民邮电出版社},
+  year={2012},
+  address={北京},
+  language={zh}
 }
-@online{pokemon,
-author = {武藏 and 小次郎 and 喵喵},
-title = {宠物小精灵火箭队台词},
-year = {1996},
-url = {http://pokemon.com},
-language = {zh}
+@article{fouh2012role,
+  title={The role of visualization in computer science education},
+  author={Fouh, Eric and Akbar, Monika and Shaffer, Clifford A},
+  journal={Computers in the Schools},
+  volume={29},
+  number={1--2},
+  pages={95--117},
+  year={2012},
+  publisher={Taylor \& Francis}
 }
-@online{latex,
-author = {wikipedia},
-title = {LaTeX},
-year = {2014},
-url = {http://en.wikipedia.org/wiki/LaTeX},
+@article{halim2012learning,
+  title={Learning Algorithms with Unified and Interactive Web-Based Visualization},
+  author={HALIM, Steven and Chun, KOH Zi and Victor, LOH Bo Huai and HALIM, Felix},
+  journal={Olympiads in Informatics},
+  number={6},
+  year={2012},
+  pages={53--68}
 }
-@online{ecustack,
-author = {华东理工教务处},
-title = {教务处本科生毕业论文格式规范（2006年版）},
-year = {2006},
-url = {http://jwc.ecust.edu.cn},
-language = {zh}
+@phdthesis{hegedivc2013vizualizacija,
+  title={Visualization of the execution of search algorithms in Artificial Intelligence},
+  author={Hegedi{\v{c}}, Matja{\v{z}}},
+  year={2013},
+  school={University of Ljubljana},
+  address={Ljubljana}
 }
-@program{gbt,
-  title={GBT7714-2005},
-  address={web},
-  publisher={Internet},
-  year={2005},
-  media={DK},
+@book{jsdesignpattern,
+  title={JavaScript设计模式},
+  author={Osmani, A.},
+  isbn={9787115314543},
+  translator={徐涛},
+  publisher={人民邮电出版社},
+  year={2013},
+  address={北京},
+  language={zh}
+}
+@book{d3jsmanual,
+  title={D3.js数据可视化实战手册},
+  author={Zhu, N.Q.},
+  isbn={9787115360960},
+  translator={杨锐 and 刘夏 and 王超 and 张沙沙},
+  publisher={人民邮电出版社},
+  year={2014},
+  address={北京},
+  language={zh}
+}
+@article{njsort2014,
+  title={数据结构实验教学中排序算法的动态演示},
+  author={宁静 and 宁正元},
+  journal={计算机光盘软件与应用},
+  number={17},
+  pages={202--203},
+  year={2014},
+  publisher={万方数据资源系统},
+  language={zh}
+}
+@article{dsajiaoxue1999,
+  title={数据结构和算法的可视化教学研究与实践},
+  author={吴伟民},
+  journal={现代计算机: 下半月版},
+  number={3},
+  pages={35--37},
+  year={1999},
+  language={zh}
+}
+@book{2012dbs,
+  title={数据结构: C语言描述},
+  author={殷人昆},
+  isbn={9787111349716},
+  year={2012},
+  publisher={机械工业出版社},
+  address={北京},
+  language={zh}
+}
+@article{pkumooc,
+  title={立足北大, 放眼未来——“数据结构与算法” MOOC 课程教学实践与思考},
+  author={张铭},
+  journal={工业和信息化教育},
+  number={9},
+  pages={65--73},
+  year={2014},
+  publisher={万方数据资源系统},
+  language={zh}
+}
+@article{zhangmooc,
+  title={探讨基于 MOOC 平台的《 数据结构》 课程设计与实现},
+  author={张钰莎},
+  journal={现代计算机: 上下旬},
+  number={17},
+  pages={8--10},
+  year={2014},
+  language={zh}
 }
