--- a/o.tex
+++ b/o.tex
@@ -43,7 +43,7 @@
 \begin{center}
 \setstretch{1.35}
 \vspace{-20pt}
-\begin{longtable}{|c|c|c|c|}
+\begin{longtable}{cccc}
 \caption{林可霉素……}
 \label{tab:linc} \\
 
@@ -62,8 +62,8 @@
 \endlastfoot
 \hline
     第1行第1列 & 第1行第2列 & 第1行第3列 & 第1行第4列\\ \hline
-    第2行第1列 & 第2行第2列 & 第2行第3列 & 第2行第4列\\ \hline
-    第3行第1列 & 第3行第2列 & 第3行第3列 & 第3行第4列\\ \hline
+    第2行第1列 & 第2行第2列 & 第2行第3列 & 第2行第4列\\ 
+    第3行第1列 & 第3行第2列 & 第3行第3列 & 第3行第4列\\ \hline 
 
 \end{longtable}
 \end{center}
